--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,53 +1,35 @@
-name: Windows AnyDesk Portable Setup with curl
+name: Windows AnyDesk Portable Setup (cmd)
 
 on:
   workflow_dispatch:
 
 jobs:
   setup:
-    runs-on: windows-latest  # Use self-hosted Windows runner with GUI
+    runs-on: windows-latest
 
     steps:
-      - name: Download AnyDesk Portable using curl
+      - name: Download AnyDesk Portable
         run: curl.exe -L -o "%USERPROFILE%\AnyDeskPortable.exe" https://download.anydesk.com/AnyDesk.exe
         shell: cmd
 
-      - name: Configure AnyDesk Portable Password
-        run: |
-          $adConfigPath = "$env:APPDATA\AnyDesk"
-          if (-not (Test-Path $adConfigPath)) {
-            New-Item -ItemType Directory -Path $adConfigPath | Out-Null
-          }
-          $passwordBytes = [System.Text.Encoding]::UTF8.GetBytes("DANIEL64MACOSVM")
-          $passwordHex = $passwordBytes | ForEach-Object { $_.ToString("X2") } -join ''
-          $iniContent = @"
-ad.password=0x$passwordHex
-ad.unattended_access=true
-ad.ui_access=true
-"@
-          Set-Content -Path "$adConfigPath\ad.ini" -Value $iniContent
-        shell: powershell
+      - name: Configure AnyDesk Portable Password (PowerShell helper)
+        run: powershell -Command ^
+          "$adConfigPath = \"$env:APPDATA\AnyDesk\"; ^
+          if (-not (Test-Path $adConfigPath)) { New-Item -ItemType Directory -Path $adConfigPath | Out-Null }; ^
+          $passwordBytes = [System.Text.Encoding]::UTF8.GetBytes('DANIEL64MACOSVM'); ^
+          $passwordHex = $passwordBytes | ForEach-Object { $_.ToString('X2') } -join ''; ^
+          $iniContent = @\"ad.password=0x$passwordHex`nad.unattended_access=true`nad.ui_access=true\"@; ^
+          Set-Content -Path \"$adConfigPath\ad.ini\" -Value $iniContent"
+        shell: cmd
 
       - name: Launch AnyDesk Portable
-        run: |
-          Start-Process "$env:USERPROFILE\AnyDeskPortable.exe"
-          Start-Sleep -Seconds 5
-        shell: powershell
-
-      - name: Show AnyDesk ID
-        run: |
-          $confFile = "$env:APPDATA\AnyDesk\system.conf"
-          if (Test-Path $confFile) {
-            Get-Content $confFile | Select-String 'ad.anynet.id'
-          } else {
-            Write-Host "AnyDesk ID not found yet."
-          }
-        shell: powershell
+        run: start "" "%USERPROFILE%\AnyDeskPortable.exe"
+        shell: cmd
 
       - name: Keep runner alive
         run: |
-          while ($true) {
-            Write-Host "Still running..."
-            Start-Sleep -Seconds 60
-          }
-        shell: powershell
+          :loop
+          echo Still running...
+          timeout /t 60 /nobreak > nul
+          goto loop
+        shell: cmd
