--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Windows AnyDesk Portable Setup (cmd)
+name: Windows AnyDesk Setup with Chocolatey (cmd)
 
 on:
   workflow_dispatch:
@@ -8,22 +8,37 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Download AnyDesk Portable
-        run: curl.exe -L -o "%USERPROFILE%\AnyDeskPortable.exe" https://download.anydesk.com/AnyDesk.exe
+      - name: Install Chocolatey (if missing)
+        run: |
+          where choco || (
+            @powershell -NoProfile -InputFormat None -ExecutionPolicy Bypass -Command ^
+              "Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))"
+          )
         shell: cmd
 
-      - name: Configure AnyDesk Portable Password (PowerShell helper)
+      - name: Install AnyDesk with Chocolatey
+        run: choco install anydesk -y
+        shell: cmd
+
+      - name: Set AnyDesk Password (PowerShell helper)
         run: powershell -Command ^
-          "$adConfigPath = \"$env:APPDATA\AnyDesk\"; ^
-          if (-not (Test-Path $adConfigPath)) { New-Item -ItemType Directory -Path $adConfigPath | Out-Null }; ^
-          $passwordBytes = [System.Text.Encoding]::UTF8.GetBytes('DANIEL64MACOSVM'); ^
-          $passwordHex = $passwordBytes | ForEach-Object { $_.ToString('X2') } -join ''; ^
-          $iniContent = @\"ad.password=0x$passwordHex`nad.unattended_access=true`nad.ui_access=true\"@; ^
-          Set-Content -Path \"$adConfigPath\ad.ini\" -Value $iniContent"
+          "$RegPath = 'HKLM:\\SOFTWARE\\AnyDesk'; ^
+          if (-not (Test-Path $RegPath)) { New-Item -Path $RegPath -Force | Out-Null }; ^
+          $Password = 'DANIEL64MACOSVM'; ^
+          $PasswordBytes = [System.Text.Encoding]::UTF8.GetBytes($Password); ^
+          Set-ItemProperty -Path $RegPath -Name 'Password' -Value $PasswordBytes -Type Binary"
         shell: cmd
 
-      - name: Launch AnyDesk Portable
-        run: start "" "%USERPROFILE%\AnyDeskPortable.exe"
+      - name: Launch AnyDesk
+        run: |
+          if exist "C:\Program Files (x86)\AnyDesk\AnyDesk.exe" (
+            start "" "C:\Program Files (x86)\AnyDesk\AnyDesk.exe"
+          ) else if exist "C:\Program Files\AnyDesk\AnyDesk.exe" (
+            start "" "C:\Program Files\AnyDesk\AnyDesk.exe"
+          ) else (
+            echo AnyDesk executable not found.
+            exit /b 1
+          )
         shell: cmd
 
       - name: Keep runner alive
